# mix-tool

./: .gitignore  Byte.hpp  CMakeLists.txt  Command.hpp  EnterA.cpp  EnterA.hpp  Machine.cpp  Machine.hpp  Makefile  Memory.cpp  Overflow.hpp  Register.hpp  Word.cpp  headers.hpp  main.cpp  mix  mix_debug
Source/: CMakeLists.txt  Command.cpp  Command.hpp  Comparison.hpp  Enter1.cpp  Enter1.hpp  EnterA.cpp  EnterA.hpp  EnterX.cpp  EnterX.hpp  Machine.cpp  Machine.hpp  Memory.cpp  Memory.hpp  Register.cpp  Register.hpp  Runtime.cpp  Runtime.hpp  Sign.cpp  Sign.hpp  StoreA.cpp  StoreA.hpp  Word.cpp  Word.hpp
Source/Commands/: Add.cpp  Add.hpp  CMakeLists.txt  Command.cpp  Command.hpp  CommandStore.cpp  CommandStore.hpp  Compare.hpp  Compare1.cpp  Compare1.hpp  Compare2.cpp  Compare2.hpp  Compare3.cpp  Compare3.hpp  Compare4.cpp  Compare4.hpp  Compare5.cpp  Compare5.hpp  Compare6.cpp  Compare6.hpp  CompareA.cpp  CompareA.hpp  CompareX.cpp  CompareX.hpp  Enter.hpp  Enter1.cpp  Enter1.hpp  Enter2.cpp  Enter2.hpp  Enter3.cpp  Enter3.hpp  Enter4.cpp  Enter4.hpp  Enter5.cpp  Enter5.hpp  Enter6.cpp  Enter6.hpp  EnterA.cpp  EnterA.hpp  EnterX.cpp  (+85 more)
Tests/: '  CMakeLists.txt  machine_integrationtest.cc  runtime_integrationtest.cc
mix.dSYM/Contents/: Info.plist
mix_debug.dSYM/Contents/: Info.plist
mix_debug.dSYM/Contents/Resources/DWARF/: mix_debug
